tests/ipaddr.out
ip -3.3
   ^ Parse error.
ip xyz
   ^ Parse error.
ip 333.0.1.2
   ^ Parse error.
ip 1.2.3.3a
   ^ Parse error.
