tests/ipaddr.cli
ip 1.2.3.4
ip 0.1.2.3
ip -3.3
ip xyz
ip 333.0.1.2
ip 1.2.3.3a
